--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,25 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  <h1>Viki</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    Everything in A page when Coding.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p>Have Fun</p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/index">Here You Go<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
+  <h4>What is this site?</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+    It's <b>Viki</b>! No spell error, just Viki. Always be different.
   </p>
 
-  <h4>Angular</h4>
+  <h4>Who's the King Here?</h4>
   <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
+    Hebi Li
   </p>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <h4>About Me?</h4>
+  <p>
+    See <a href="#/about">About</a> page
+  </p>
 </div>
