--- a/app/views/post.html
+++ b/app/views/post.html
@@ -3,6 +3,8 @@
   <a class="btn btn-primary" ng-hide="githubAdd==''" ng-href="{{githubAdd}}">Add</a>
 </div>
 
+<div id="toc"></div>
+
 <ul ng-repeat="link in links">
   <li><a class='btn' ng-class="{'btn-default':link.final, 'btn-success':!link.final}" ng-href="{{link.link}}">{{link.name}}</a></li>
 </ul>
